Add dwonload fragment functionality.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
             android:name="com.sampleboard.view.detail.DetailActivity"
             android:theme="@style/DetailTheme" />
         <activity android:name=".view.profile.ProfileActivity"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|touchscreen"></activity>
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|touchscreen"
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
         <activity
             android:name="com.sampleboard.view.SettingsActivity"
             android:label="@string/title_activity_settings"></activity>
