--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -29,20 +30,23 @@
         <activity
             android:name="com.sampleboard.view.SplashActivity"
             android:theme="@style/SplashTheme">
+
+        </activity>
+        <activity android:name="com.sampleboard.view.otpLogin.LoginActivity" />
+        <activity
+            android:name="com.sampleboard.view.DashBoardActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|touchscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.sampleboard.view.otpLogin.LoginActivity" />
-        <activity
-            android:name="com.sampleboard.view.DashBoardActivity"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|touchscreen" />
         <activity
             android:name="com.sampleboard.view.detail.DetailActivity"
             android:theme="@style/DetailTheme" />
         <activity android:name=".view.profile.ProfileActivity"
+            android:launchMode="standard"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|touchscreen"
             android:windowSoftInputMode="adjustResize|stateHidden"></activity>
         <activity
