--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:palette-v7:25.3.1'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    compile 'com.google.android.gms:play-services-wallet:10.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.alamkanak:android-week-view:1.2.6'
     compile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
@@ -57,8 +55,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
-    compile 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
     compile 'com.facebook.android:account-kit-sdk:4.+'
+    compile 'com.facebook.rebound:rebound:0.3.8'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:support-vector-drawable:25.3.1'
     testCompile 'junit:junit:4.12'
