--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        <meta-data
-            android:name="com.google.android.gms.wallet.api.enabled"
-            android:value="true" />
 
         <activity android:name="com.sampleboard.MainActivity" />
         <activity
@@ -53,7 +47,7 @@
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|touchscreen"
             android:windowSoftInputMode="adjustResize|stateHidden"></activity>
         <activity
-            android:name="com.sampleboard.view.SettingsActivity"
+            android:name="com.sampleboard.view.settingsView.SettingsActivity"
             android:label="@string/title_activity_settings"></activity>
 
         <!-- Music player Activity -->
