--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity
             android:name="com.sampleboard.view.activity.DashBoardActivity"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|touchscreen">
+            android:configChanges="orientation|keyboardHidden|keyboard|touchscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
