--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.sampleboard">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    <uses-permission
-        android:name="android.permission.USE_FINGERPRINT" />
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 
     <application
         android:name="com.sampleboard.GlobalActivity"
@@ -36,23 +37,25 @@
 
         <activity
             android:name="com.sampleboard.view.activity.DashBoardActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:configChanges="keyboard"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity android:name=".view.activity.HolderActivity" />
+        <activity android:name=".view.activity.DetailActivityV2" />
         <activity
-            android:name="com.sampleboard.view.activity.DetailActivity"
-            android:theme="@style/DetailTheme"/>
-        <activity android:name=".view.activity.ProfileActivity"
-            android:launchMode="standard"
+            android:name=".view.activity.ProfileActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|touchscreen"
-            android:windowSoftInputMode="adjustResize|stateHidden"/>
+            android:launchMode="standard"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
             android:name="com.sampleboard.view.activity.SettingsActivity"
-            android:label="@string/title_activity_settings"/>
+            android:label="@string/title_activity_settings" />
 
 
         <!-- Music player Activity -->
         <activity
             android:name="com.sampleboard.view.musicModule.MusicPlayerActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
 
         <!-- Facebook Account kit -->
         <meta-data
