--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,14 +57,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //    compile 'com.google.android.gms:play-services:10.2.0'
-    compile 'com.android.support:multidex:1.0.2'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:palette-v7:26.1.0'
-    compile 'com.android.support:support-vector-drawable:26.1.0'
+    implementation 'com.android.support:multidex:1.0.2'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:palette-v7:26.1.0'
+    implementation 'com.android.support:support-vector-drawable:26.1.0'
 
     annotationProcessor 'com.android.databinding:compiler:3.0.1'
     //    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-rc1"
@@ -81,22 +81,25 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.3'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     //daggar
-    compile 'com.google.dagger:dagger:2.11'
-    compile 'com.google.dagger:dagger-android-support:2.11'
+    implementation 'com.google.dagger:dagger:2.11'
+    implementation 'com.google.dagger:dagger-android-support:2.11'
     annotationProcessor "com.google.dagger:dagger-android-processor:2.11"
     annotationProcessor "com.google.dagger:dagger-compiler:2.11"
 
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
-    compile 'com.squareup.okhttp3:okhttp:3.8.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
-    compile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.facebook.android:account-kit-sdk:4.+'
-    compile 'com.facebook.rebound:rebound:0.3.8'
+    implementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.facebook.android:account-kit-sdk:4.+'
+    implementation 'com.facebook.rebound:rebound:0.3.8'
+
+    implementation 'com.kbeanie:multipicker:1.1.31@aar'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
 
 }
